Refine backend structure
